--- a/CSS/style.css
+++ b/CSS/style.css
@@ -31,14 +31,52 @@ max-width: 500px;
 
 }
 }
+@media (max-width:600px){
+.registration    {
+max-width: 500px;
+}
+.text1{
+font-size: 4em;
+}
+.reg{
+width: 70%;
+}
+}
 @media (max-width:470px){
 .registration    {
 max-width: 400px; 
+}
+.text1{
+font-size: 3.2em;
+}
+.reg{
+width: 50%;
 }
 }
 @media (max-width:370px){
 .registration    {
 max-width: none; 
+}
+.text1{
+font-size: 2.5em;
+}
+.reg{
+width: 30%;
+}
+}
+@media screen and (max-width: 600px) {
+body {
+font-size:85%;
+}
+}
+@media screen and (max-width: 470px) {
+body {
+font-size:73%;
+}
+}
+@media screen and (max-width: 600px) {
+.text1 {
+margin-bottom:2% ;
 }
 }
 
